syntax = "proto3";
import "commontype/QoS.proto";

package commontype;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.type";
option java_outer_classname = "SubInfoProtos";

message SubInfo {
  string trafficId = 1;
  string inboxId = 2;
  QoS subQoS = 3;
  string topicFilter = 4;
}
