syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/MatchInfo.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.mqtt.inbox.rpc.proto";;
option java_outer_classname = "MessageReceiverProtos";

package mqttbroker;

service OnlineInboxBroker {
  rpc write (stream WriteRequest) returns (stream WriteReply);
  rpc sub(SubRequest) returns (SubReply);
  rpc unsub(UnsubRequest) returns (UnsubReply);
}

message WritePack{
  commontype.TopicMessagePack messagePack = 1;
  repeated commontype.MatchInfo matchInfo = 2;
}

message WriteRequest {
  uint64 reqId = 1;
  repeated WritePack pack = 2;
}

message WriteResult{
  enum Result {
    OK = 0;
    NO_INBOX = 1;
    ERROR = 2;
  }
  commontype.MatchInfo matchInfo = 1;
  Result result = 2;
}

message WriteReply {
  uint64 reqId = 1;
  repeated WriteResult result = 2;
}

message SubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string sessionId = 3;
  string topicFilter = 4;
  commontype.QoS subQoS = 5;
}

message SubReply {
  enum Result{
    OK = 0;
    EXISTS = 1;
    NO_INBOX = 2;
    EXCEED_LIMIT = 3;
    NOT_AUTHORIZED = 4;
    TOPIC_FILTER_INVALID = 5;
    ERROR = 6;
  }
  uint64 reqId = 1;
  Result result = 2;
}

message UnsubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string sessionId = 3;
  string topicFilter = 4;
}

message UnsubReply {
  enum Result {
    OK = 0;
    NO_SUB = 1;
    NO_INBOX = 2;
    NOT_AUTHORIZED = 3;
    TOPIC_FILTER_INVALID = 4;
    ERROR = 5;
  }
  uint64 reqId = 1;
  Result result = 2;
}
